# meal-plan

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 033b756c5447_created_new_tables_ingredient_meal_and_.py  22858a372a02_add_diet_requirements_relationships.py  3e83ac60d48b_update_head.py  7f80f9f2226d_add_meals_relationship_to_ingredients.py  8935668000e8_add_delete_orphans_cascade_to_diet_.py  a6971b28b5a6_user_name_no_longer_required.py  d32c684a1988_ingredient_name_unique.py  f29ad42b7495_add_meals_user_relationship.py
backend/app/api/api_v1/routers/: ingredients.py  meals.py  users.py  users_diet_requirements.py
backend/app/api/api_v1/routers/tests/: test_auth.py  test_ingredients.py  test_meals.py  test_users.py  test_users_diet_requirements.py
backend/app/db/: crud.py  models.py  schemas.py  session.py
frontend/: package.json
meal-plan/backend/app/: main.py
meal-plan/backend/app/api/api_v1/routers/: users.py
meal-plan/backend/app/core/: auth.py  config.py
meal-plan/nginx/: nginx.conf
