[tool.poetry]
name = "meal-plan backend"
version = "0.1.0"
description = "Meal planning service leveraging ChatGPT API"
authors = ["Stuart Dingwell"]
readme = "README.md"
packages = [{include = "meal_plan"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
