[tool.black]
line-length = 80

[tool.poetry]
name = "meal-plan backend"
version = "0.1.0"
description = "Meal planning service leveraging ChatGPT API"
authors = ["Stuart Dingwell"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
alembic = "^1.11.1"
authlib = "^1.2.1"
fastapi = "^0.99.1"
celery = "^5.3.1"
redis = "^4.6.0"
httpx = "^0.24.1"
ipython = "^8.14.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
pytest = "^7.4.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.18"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sqlalchemy-utils = "^0.41.1"
python-multipart = "^0.0.6"
pyjwt = "^2.7.0"
email-validator = "^2.0.0.post2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
